--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -4,8 +4,10 @@
     background-color: blue;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 30rem;
     color: white;
+    /* border: 3px solid black; */
 }
 
 .nav{
@@ -40,7 +42,6 @@
 
 .navLink:hover{
     background-color: lightseagreen;
-
 }
 
 .icons_container{
@@ -53,5 +54,29 @@
 
 .icons_container img{
     cursor: pointer;
+}
+
+.cartIcon{
+    height: 2.5rem;
+    width: 2.5rem;
+    position: relative;
+}
+
+.cartIcon img{
+    height: 100%;
+    width: 100%;
+}
+
+.cartCount{
+    height: 1.2rem;
+    width: 1.2rem;
+    border-radius: 100%;
+    background-color: yellow;
+    color: black;
+    font-size: .8rem;
+    text-align: center;
+    position: absolute;
+    top: -.2rem;
+    right: -.2rem;
 }
 
